# fast_api_test

./: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  setup_project.sh
alembic/: env.py
alembic/versions/: b46baef71b83_add_garmin_oauth_support_to_the_users_.py
app/: main.py
app/api/: auth.py
app/core/: config.py  deps.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth_service.py
